tests/cases/standard-library/errors/collections/std-collections-tree-map-after-reset.ari
fn main() -> i64 {
  var zone = zone::create(256);
  var map = collections::tree_map<i64, i64>(ref mut zone, 1, collections::less_i64);

  map.insert(ref mut zone, 1, 2);
  zone::reset(ref mut zone);

  return map.len();
}
